# marending.dev

./: .dockerignore  .env.enc  .gitignore  .prettierrc  .sops.yaml  Dockerfile  README.md  compose.prod.yml  deploy.js  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: build.yml
service/: .env.prod  Cargo.toml
service/src/: main.rs
src/: app.html  font.css  inter.css  style.css
src/components/: A.tsx  C.tsx  Chart.astro  Code.svelte  Code.tsx  Details.tsx  Feedback.svelte  Feedback.tsx  GithubSVG.tsx  H2.tsx  H3.tsx  Hint.tsx  Image.svelte  Img.astro  Info.svelte  Info.tsx  Li.tsx  LiD.tsx  Note.svelte  Note.tsx  NoteSummary.svelte  NoteSummary.tsx  P.svelte  P.tsx  Page.tsx  Table.tsx  Title.svelte  Title.tsx  WidePage.svelte  WidePage.tsx  data.ts  index.ts
src/layouts/: layout.astro
src/lib/: db.ts
src/lib/components/: A.svelte  C.svelte  Chart.svelte  Code.svelte  Date.svelte  Details.svelte  Feedback.svelte  GithubSVG.svelte  H2.svelte  H3.svelte  Hint.svelte  Image.svelte  Info.svelte  Note.svelte  NoteSummary.svelte  P.svelte  Page.svelte  ScreenWidthContainer.svelte  Subtitle.svelte  Title.svelte  Warn.svelte  WidePage.svelte  (+2 more)
src/pages/: about.astro  index.astro  notes.ts  projects.astro
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
test/: playwright.config.ts  visual.spec.ts
ui/: .markdownlint.json  .prettierrc  astro.config.mjs  package-lock.json  package.json  tsconfig.json
ui/src/: content.config.ts  typography.css
(+262 files in other folders)
