[package]
name = "marending-dev"
version = "0.1.30"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.6.1", features = ["trace", "fs"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
uuid = { version = "1.10.0", features = ["v4"] }
