[package]
name = "marending-dev"
version = "0.2.17"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.6.1", features = ["trace", "fs"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
uuid = { version = "1.10.0", features = ["v4"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-stdout = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"
dotenv = "0.15.0"
